@@ -1,6 +1,5 @@
 DIST libtorrent-rasterbar-0.15.0.tar.gz 2569328 RMD160 fa91bdcaf39e6d0da2c68346c9acffaa62a6a846 SHA1 ebc9ce111f59e538aff17102fcce907fd967cd8b SHA256 e1a79045ad041dd82850d2255037108bb17dcbe9a9a8819169a2624b72667db0
-EBUILD rb_libtorrent-0.15.0.ebuild 1349 RMD160 cde162da4b6f16335f6beb7b9b7576dae4d7e888 SHA1 a13ac835c0d44e2edfabacccf48ae41e59d0dd93 SHA256 68c26df798e3b778eedb8d4141de440df712e788ce03522bfb406a14d611a04c
-EBUILD rb_libtorrent-0.15.9999.ebuild 2263 RMD160 d646c9f4febc71162d0d3cd4e15a4e56aa1fe95a SHA1 ea5a86e77025e5f2957c46a39c01efe4a4318a58 SHA256 759cace5f09c0cdd9dc863cd2da8c56718daaa209abc12c725a765753ff4e146
+EBUILD rb_libtorrent-0.15.0-r1.ebuild 1590 RMD160 9996c691f561ad3437a62a7663fb78dd7e2ecbc3 SHA1 a089f8f2d4ac10a22694bf26818a0419d1782639 SHA256 95f275f8fea29b9ff42f612792717f5f300d0ebf0151eef3257394ab612101c0
 EBUILD rb_libtorrent-9999.ebuild 2263 RMD160 d646c9f4febc71162d0d3cd4e15a4e56aa1fe95a SHA1 ea5a86e77025e5f2957c46a39c01efe4a4318a58 SHA256 759cace5f09c0cdd9dc863cd2da8c56718daaa209abc12c725a765753ff4e146
-MISC ChangeLog 820 RMD160 b4473b9aa07def959cddb107fd156f2f54a40a8b SHA1 fd265314f466fcb8a4988a38ab4fe7ab8c774f63 SHA256 2992f3b5520383e0947fd85250e2f46afb049fe10724c9309f5dce3f6709f3f3
+MISC ChangeLog 994 RMD160 a3e779ec449f7e5c77d6167b2169cec30cb8fb70 SHA1 def3948065c5aad7037399f7630f48b59e8f181f SHA256 c01ced9f264641fcec23fa67f226d2fd7e5594af2e2a8347de2ce644a74d55c5
 MISC metadata.xml 614 RMD160 23cd227c5a94b89051b1ba85c4dba795f147be46 SHA1 7d25d4b8d7fc18df5d5c0dae6e2c808b2cb71116 SHA256 4ed063799b4c0fb5a8912d8595f97fe27af591984e61017425d06f2e13793f55
